<resources>
    <string name="app_name">360Dashboard</string>
    <string name="maintenance">Maintenance</string>
    <string name="inventory">Inventory</string>
    <string name="vehicles">Vehicles</string>
    <string name="expenses">Expenses</string>
    <string name="messages">Messages</string>
    <string name="invoices">Invoices</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
</resources>